<resources>
    <string name="app_name">FP가계부</string>

    <string name="titleName">Free Pay 가계부</string>
    <string name="titleWork">근무 명</string>
    <string name="titleTime">근무시간</string>
    <string name="titleAmount">근무금액</string>

    <string name="titleStatistics">통계</string>

    <string name="baseTimeSelect">기준 시/분</string>
    <string name="baseTime">기준 시간</string>
    <string name="baseAmount">기준 금액</string>
    <string name="baseDayOfMonth">월 기준일</string>

    <string name="dailyTitle">일</string>

    <string name="labelWon">원</string>
    <string name="labelMinute">분</string>
    <string name="labelHour">시</string>
    <string name="labelTime">시간</string>

    <string name="buttonSave">저장</string>
    <string name="buttonCancel">취소</string>

    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>

    <string name="settingTitle">설정</string>
    <string name="settingMessage">기준시간 및 기준금액을 입력하세요.</string>

    <string name="msgValidationSection">기준 시/분을 입력하세요.</string>
    <string name="msgValidationTime">기준 시간을 입력하세요.</string>
    <string name="msgValidationAmount">기준 금액을 입력하세요.</string>

    <string name="msgDailyValidationNm">근무 명을 입력하세요.</string>
    <string name="msgDailyValidationTime">근무 시간을 입력하세요.</string>
    <string name="msgDailyValidationAmount">근무 금액을 입력하세요.</string>

    <string name="msgChooseDay">달력에서 입력할 날짜를 선택해주세요.</string>

    <string name="msgBaseDayOfMonth">기준일 입력이 잘못되었습니다.\n1~31까지의 숫자중에 입력하세요</string>

    <string name="srhBaseTitle">조회 기준</string>

    <string name="srhSection"> ~ </string>
    <string name="buttonSrh">조회</string>
    <string name="baseYearMonth">기준년월</string>F

    <string name="btnSettingNm">세팅</string>
    <string name="btnStatistics">통계</string>

    <string name="srhStDt">시작일</string>
    <string name="srhEdDt">종료일</string>
</resources>
