<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="6"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:text="@string/settingTitle"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baseTimeSelect"
        android:layout_column="0"
        android:layout_row="1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_vertical"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHour"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:text="@string/labelHour" />

        <RadioButton
            android:id="@+id/radioMinute"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:text="@string/labelMinute" />
    </RadioGroup>

    <TextView
        android:text="@string/baseTime"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_vertical"/>

    <EditText
        android:id="@+id/txtBaseTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_row="2"
        android:layout_column="1"
        android:autofillHints=""
        android:ems="10"
        android:gravity="end"
        android:hint="@string/baseTime"
        android:inputType="number"
        android:layout_gravity="center_vertical"
        android:textColorHint="#546E7A" />

    <TextView
        android:text="@string/baseAmount"
        android:layout_column="0"
        android:layout_row="3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_vertical"/>

    <EditText
        android:id="@+id/txtBaseAmt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_column="1"
        android:layout_row="3"
        android:autofillHints=""
        android:ems="10"
        android:gravity="end"
        android:hint="@string/baseAmount"
        android:inputType="number"
        android:layout_gravity="center_vertical"
        android:textColorHint="#546E7A" />

    <TextView
        android:text="@string/baseDayOfMonth"
        android:layout_column="0"
        android:layout_row="4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_vertical"/>

    <EditText
        android:id="@+id/txtBaseDayOfMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:autofillHints=""
        android:ems="2"
        android:gravity="end"
        android:hint="@string/day"
        android:inputType="number"
        android:layout_gravity="center_vertical"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/baseDayOfMonthInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="70sp"
        android:layout_height="48dp"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/buttonSave"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/btnColor"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="70sp"
        android:layout_height="48dp"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/buttonCancel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/btnGray"
        android:textColor="@color/white"
        android:layout_gravity="end"/>

</GridLayout>