<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleStatistics"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/baseYearMonth"
                android:textStyle="bold"
                android:gravity="center"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp">

                <RadioButton
                    android:id="@+id/radioSrhYear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/year"/>

                <RadioButton
                    android:id="@+id/radioSrhMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/month"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/txtSrhStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srhSection"/>

            <EditText
                android:id="@+id/txtSrhEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="5"/>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="50sp"
                android:layout_height="30sp"
                android:text="@string/buttonSrh"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@color/btnColor"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/statRecyclerView"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</ScrollView>