<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/titleLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleName"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="start"/>

                <ImageButton
                    android:id="@+id/btnStatistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/statistics"
                    android:padding="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp">
                </ImageButton>

                <ImageButton
                    android:id="@+id/btnSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/settings"
                    android:padding="0dp"
                    android:layout_marginTop="5dp"/>

            </GridLayout>

        </LinearLayout>

        <View
            android:id="@+id/shape1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="2"
            android:padding="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:text="@string/month"
                android:id="@+id/monthTitle"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowSpan="2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titleTime"
                android:layout_column="1"
                android:layout_row="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/txtSumTimes"
                android:layout_width="160sp"
                android:layout_column="2"
                android:layout_row="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="fill_horizontal"
                android:gravity="end"/>

            <TextView
                android:id="@+id/timeComment2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labelHour"
                android:layout_column="3"
                android:layout_row="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingRight="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titleAmount"
                android:layout_column="1"
                android:layout_row="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/txtSumAmount"
                android:layout_row="1"
                android:layout_column="2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="fill_horizontal"
                android:gravity="end"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labelWon"
                android:layout_column="3"
                android:layout_row="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingRight="10sp" />

        </GridLayout>

        <View
            android:id="@+id/shape2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/shape3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4"
            android:padding="4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:layout_gravity="start" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="70sp"
                android:layout_height="30sp"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/buttonSave"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@color/btnColor"
                android:textColor="@color/white"
                android:layout_columnSpan="1"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/titleWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txtDailyWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:ems="8"
                android:inputType="text"
                android:gravity="end" />

            <TextView
                android:text="@string/titleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txtDailyTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:ems="8"
                android:inputType="number"
                android:gravity="end" />

            <TextView
                android:id="@+id/timeComment1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelHour"
                android:layout_column="2"
                android:layout_row="2"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/titleAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txtDailyAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:ems="8"
                android:gravity="end"
                android:inputType="number" />

            <TextView
                android:text="@string/labelWon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="3"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </GridLayout>

    </LinearLayout>
</ScrollView>
